--- a/index.html
+++ b/index.html
@@ -1,47 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>REAPER Remote Control</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 100px; }
-    button {
-      font-size: 2em; padding: 20px 40px; margin: 20px;
-      border: none; border-radius: 10px; cursor: pointer;
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 80px;
+      background: #111;
+      color: white;
     }
-    .record { background-color: red; color: white; }
-    .stop { background-color: gray; color: white; }
+    h2 {
+      margin-bottom: 40px;
+    }
+    button {
+      font-size: 2em;
+      padding: 20px 60px;
+      margin: 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.1s ease;
+    }
+    button:active {
+      transform: scale(0.95);
+    }
+    .record {
+      background-color: red;
+      color: white;
+    }
+    .stop {
+      background-color: gray;
+      color: white;
+    }
+    #status {
+      margin-top: 30px;
+      font-size: 1.2em;
+      color: #0f0;
+    }
   </style>
 </head>
 <body>
   <h2>🎛️ REAPER Remote Control</h2>
+
   <button class="record" onclick="setCommand('RECORD')">RECORD</button>
   <button class="stop" onclick="setCommand('STOP')">STOP</button>
-  <p id="status"></p>
+
+  <p id="status">Ready</p>
 
   <script>
+    const API_BASE = "https://reaper-remote-api-luidnas-projects.vercel.app/api"; // 🔧 change this
+
     async function setCommand(cmd) {
-      const url = `https://api.github.com/repos/YOUR_USERNAME/reaper-remote/contents/command.txt`;
-      const message = `Set ${cmd}`;
-      const content = btoa(cmd + "\n"); // base64 encode
+      document.getElementById("status").textContent = "Sending...";
+      try {
+        const resp = await fetch(`${API_BASE}/setCommand?cmd=${cmd}`);
+        const json = await resp.json();
 
-      const getResp = await fetch(url);
-      const data = await getResp.json();
-      const sha = data.sha; // required for updating an existing file
-
-      const resp = await fetch(url, {
-        method: "PUT",
-        headers: {
-          "Authorization": "token YOUR_GITHUB_TOKEN",
-          "Accept": "application/vnd.github.v3+json"
-        },
-        body: JSON.stringify({ message, content, sha })
-      });
-
-      if (resp.ok) {
-        document.getElementById('status').innerText = `Command set to ${cmd}`;
-      } else {
-        document.getElementById('status').innerText = `Error updating command`;
+        if (json.success) {
+          document.getElementById("status").textContent = `✅ Command set to ${cmd}`;
+        } else {
+          document.getElementById("status").textContent = `⚠️ Error: ${json.error || "Unknown"}`;
+        }
+      } catch (err) {
+        document.getElementById("status").textContent = "❌ Network error";
+        console.error(err);
       }
     }
   </script>
