Rename header to 'Luizinho's Remote Control'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <h2>🎚️ REAPER Remote Control</h2>
+  <h2>🎚️ Luizinho's Remote Control</h2>
 
   <div>
     <button class="record" onclick="setCommand('RECORD')">RECORD</button>
